[gd_scene load_steps=3 format=3 uid="uid://cng0oxvq4lgro"]

[ext_resource type="Script" path="res://scenes/weapons/pistol.gd" id="1_6qapt"]
[ext_resource type="Texture2D" uid="uid://dfxh168dklqyi" path="res://assets/sprites/gun.png" id="2_rveyu"]

[node name="Pistol" type="Node2D"]
script = ExtResource("1_6qapt")
weapon_name = "Pistol"
weapon_type = 1
cooldown = 0.25

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(7, -5)
texture = ExtResource("2_rveyu")

[node name="BulletSpawn" type="Marker2D" parent="."]
position = Vector2(16, -6)

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
